Footer made responsive and auto focus on page routing.

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -77,8 +77,10 @@
 .footer-info-bar {
   display: flex;
   justify-content: center;
+
   a {
     margin: 0 0 0 10px;
+
     i {
       padding: 0;
       width: 35px;
@@ -88,6 +90,7 @@
       justify-content: center;
       align-items: center;
     }
+
     .fa-facebook-official {
       background: #3c58a1;
       color: #fff;
@@ -96,14 +99,15 @@
     .fa-instagram {
       color: #fff;
       background: linear-gradient(
-        45deg,
-        #f09433,
-        #e6683c 25%,
-        #dc2743 50%,
-        #cc2366 75%,
-        #bc1888
+          45deg,
+          #f09433,
+          #e6683c 25%,
+          #dc2743 50%,
+          #cc2366 75%,
+          #bc1888
       );
     }
+
     .fa-youtube {
       background: #fe1f1f;
       color: #fff;
@@ -120,34 +124,54 @@
   border-radius: 20px;
 }
 
-@media only screen  and (min-width: 850px) and (max-width: 960px) {
+@media only screen and (min-width: 850px) and (max-width: 960px) {
   .logo-img-footer {
     width: 100px;
     margin-block-start: -180px;
   }
 }
-@media only screen  and (min-width: 750px) and (max-width: 850px) {
+
+@media only screen and (min-width: 750px) and (max-width: 850px) {
   .logo-img-footer {
     width: 90px;
     margin-block-start: -190px;
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 750px) {
   .logo-img-footer {
     width: 80px;
     margin-block-start: -220px;
+    margin-left: -40px;
   }
 }
 
 @media only screen and (max-width: 685px) {
   .input-group {
     .form-control,
-    .form-control-plaintext{
+    .form-control-plaintext {
       width: 100%;
     }
   }
+  .footerNew-top-section {
+    .container {
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+  }
 }
+
+@media only screen and (max-width: 550px) {
+  .footerNew-top-section {
+    margin-top: 40px;
+    margin-left: -45px;
+    margin-right: -50px;
+  }
+  h3 {
+    font-size: 1em;
+  }
+}
+
 
 .footerNew-fourth-nav {
   padding-bottom: 1em;
@@ -200,4 +224,43 @@
       flex-direction: column;
     }
   }
+}
+
+@media only screen and (max-width: 550px) {
+  .footerNew {
+    .boatImage {
+      width: 60px;
+      height: 60px;
+      top: 22%;
+      position: absolute;
+      left: 5%;
+    }
+    .planetImage {
+      width: 60px;
+      height: 50px;
+      top: 23%;
+      position: absolute;
+      right: 10%;
+    }
+  }
+
+  .footerNew-top-section{
+    padding-bottom: 5em;
+    .col-4 {
+      padding-right: 0px;
+      padding-left: 0px;
+    }
+  }
+
+  /* Overriding styles */
+  ::-webkit-input-placeholder {
+    font-size: 13px!important;
+  }
+  :-moz-placeholder { /* Firefox 18- */
+    font-size: 13px!important;
+  }
+  ::-moz-placeholder {  /* Firefox 19+ */
+    font-size: 13px!important;
+  }
+
 }
