--- a/src/app/pages/shoonya-page/shoonya-page.component.scss
+++ b/src/app/pages/shoonya-page/shoonya-page.component.scss
@@ -1,56 +1,56 @@
 @import "../../../assets/styles/variables.scss";
 
 .bg-img {
-    width: 100%;
-    height: 30em;
-    z-index: 0;
-    opacity: 0.6;
-    position: relative;
-    background: url("/assets/img/home-page-break-bg.png") no-repeat;
-    background-size: cover;
-  
-    h1 {
-      font-weight: 700;
-      text-transform: uppercase;
-      color: #ffffff;
-      font-family: sans-serif;
-      font-size: 3em;
-    }
-    
-    p{
-        width: 60%;
-        color: white;
-    }
+  width: 100%;
+  height: 30em;
+  z-index: 0;
+  opacity: 0.6;
+  position: relative;
+  background: url("/assets/img/home-page-break-bg.png") no-repeat;
+  background-size: cover;
+
+  h1 {
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-family: sans-serif;
+    font-size: 3em;
+  }
+
+  p {
+    width: 60%;
+    color: white;
+  }
 }
-  
+
 .h100 {
   height: 100%;
 }
 
 
-
 .title_sec {
-    text-align: center;
-    margin: 0 0 2em;
-    h2{
-        font-family: "Cabin Sketch", cursive;
-    }
+  text-align: center;
+  margin: 0 0 2em;
+
+  h2 {
+    font-family: "Cabin Sketch", cursive;
+  }
 }
 
-.shoonya-content{
+.shoonya-content {
   width: 100%;
   padding: 3em 0;
   width: 100%;
   background: $white-primary;
 
-  .container{
+  .container {
     width: 70%;
   }
-  
-  p{
+
+  p {
     font-size: 15px;
   }
-  
+
   .circle {
     height: 7em;
     width: 7em;
@@ -58,4 +58,50 @@
     display: block;
   }
 
+}
+
+@media only screen and (max-width: 450px) {
+  .shoonya-content {
+    p {
+      font-size: 13px;
+    }
+
+    .container {
+      width: 100%;
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+  }
+
+}
+
+
+@media only screen and (min-width: 370px) and (max-width: 600px) {
+  .bg-img {
+    height: 22em;
+
+    h1 {
+      font-size: 2em;
+    }
+
+    p {
+      margin-bottom: -5em;
+    }
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  .bg-img {
+    height: 17em;
+
+    h1 {
+      font-size: 1.3em;
+    }
+
+    p {
+      font-size: 0.7em;
+      margin-bottom: -5em;
+    }
+
+  }
 }
