Added new content

--- a/src/app/components/carousel-image-section/carousel-image-section.component.scss
+++ b/src/app/components/carousel-image-section/carousel-image-section.component.scss
@@ -85,12 +85,12 @@
 }
 
 .slide-1 {
-  background: url("/assets/img/home-greenboard-bg.png") no-repeat bottom;
+  background: url("/assets/img/homepage/1.jpg") no-repeat bottom;
   background-size: cover;
 }
 
 .slide-2 {
-  background: url("/assets/img/home-blackboard-bg.jpg") no-repeat bottom;
+  background: url("/assets/img/homepage/3.jpg") no-repeat bottom;
   background-size: cover;
 }
 
