--- a/src/app/components/carousel-info-card-event/carousel-info-card-event.component.html
+++ b/src/app/components/carousel-info-card-event/carousel-info-card-event.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="curr-box">
-    <a href="/#" class=""
+    <a href="/events-and-gallery" class=""
       ><figure><img [src]="imgSrc" /></figure>
       <div class="event-card-date">
         <div><i class="fa fa-calendar"></i> {{ date }}</div>
@@ -11,7 +11,7 @@
     <div class="curr-box-desc">
       <p>
         {{ content }}
-        <a href="/#" class="">Read More</a>
+        <a href="/events-and-gallery" class="">View gallery</a>
       </p>
     </div>
   </div>
