--- a/src/app/pages/books-and-beyond-page/books-and-beyond-page.component.html
+++ b/src/app/pages/books-and-beyond-page/books-and-beyond-page.component.html
@@ -4,15 +4,15 @@
   [content]="introSectionContent"
   [contentList]="introSectionContentList"
 ></app-learning-intro>
-<!-- day at small wonders -->
-<div class="day-section">
-  <div class="container">
-    <h3 class="text-center">{{ daySectionTitle }}</h3>
+<!--&lt;!&ndash; day at Small Wonders &ndash;&gt;-->
+<!--<div class="day-section">-->
+<!--  <div class="container">-->
+<!--    <h3 class="text-center">{{ daySectionTitle }}</h3>-->
 
-    <p>{{ daySectionContent }}</p>
-    <img src="/assets/img/footer-background.png" alt="input-form-img" />
-  </div>
-</div>
+<!--    <p>{{ daySectionContent }}</p>-->
+<!--    <img src="/assets/img/footer-background.png" alt="input-form-img" />-->
+<!--  </div>-->
+<!--</div>-->
 <!-- what children will learn -->
 <div class="children-learn-section">
   <div class="container">
