--- a/src/app/pages/curriculum-page/curriculum-page.component.html
+++ b/src/app/pages/curriculum-page/curriculum-page.component.html
@@ -10,8 +10,8 @@
 
 <app-right-aligned-image [imgSrc]="rightImg2" [title]="rightTitle2" [content]="rightContent2"></app-right-aligned-image>
 
-<app-left-aligned-image [imgSrc]="leftImg3" [title]="leftTitle3" [content]="leftContent3"
+<!--<app-left-aligned-image [imgSrc]="leftImg3" [title]="leftTitle3" [content]="leftContent3"-->
 
-[listItems]="leftItems3"
-[listLinks]="leftLinks3"
-></app-left-aligned-image>
+<!--[listItems]="leftItems3"-->
+<!--[listLinks]="leftLinks3"-->
+<!--&gt;</app-left-aligned-image>-->
