--- a/src/app/pages/home-page/branch-info-section/branch-info-section.component.html
+++ b/src/app/pages/home-page/branch-info-section/branch-info-section.component.html
@@ -18,7 +18,7 @@
           <div ngxSlickItem *ngFor="let item of branchList" class="slide">
             <!-- branch info card-->
             <div class="branch-info-card">
-              <a href="/#" class="row">          
+              <a href="/#" class="row">
                 <figure class="col-lg-4 col-4">
                   <img [src]="item.imgSrc" />
                 </figure>
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="text-center mt-4">
-      <button class="btn mbtn" (click)="goToSchedulePage()">Know More</button>
+      <button class="btn mbtn" (click)="goToSchedulePage()">Schedule a tour</button>
     </div>
   </div>
 </div>
