--- a/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.html
+++ b/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.html
@@ -24,6 +24,7 @@
               [title]="item.title"
               [content]="item.content"
               [ageInterval]="item.ageInterval"
+              [routePath]="item.routePath"
             ></app-carousel-info-card>
           </div>
         </ngx-slick-carousel>
@@ -53,8 +54,8 @@
       </div>
     </div>
 
-    <div class="text-center mt-4">
-      <button class="btn mbtn" routerLink='/{{type}}'>Know More</button>
-    </div>
+<!--    <div class="text-center mt-4">-->
+<!--      <button class="btn mbtn" routerLink='/{{type}}'>Know More</button>-->
+<!--    </div>-->
   </div>
 </div>
