--- a/src/app/pages/home-page/page-break-section/page-break-section.component.html
+++ b/src/app/pages/home-page/page-break-section/page-break-section.component.html
@@ -5,16 +5,15 @@
   <div class="container">
     <div>
       <h2>
-        If you're looking for <strong>a full day program</strong> small wonders
-        is for you
+        If you're looking for a <strong>free-flowing, non-restrictive learning environment</strong> Small Wonders is for
+        you.
       </h2>
-      <h3>
-        Our commitment is to be the best school possible. Contact us today to
-        see if we are a fit for you
-      </h3>
+      <h4>
+        Our commitment is to be the best school possible. Contact us today to see if we are a fit for you.
+      </h4>
     </div>
     <div class="text-center mt-4">
-      <button class="btn mbtn">Know More</button>
+      <button  [routerLink]="['/contact-form']" class="btn mbtn">Contact us</button>
     </div>
   </div>
 </div>
