--- a/src/app/pages/home-page/parents-testimonial/parents-testimonial.component.html
+++ b/src/app/pages/home-page/parents-testimonial/parents-testimonial.component.html
@@ -25,7 +25,8 @@
               </div>
               <div class="testimonial-box__info">
                 <figure>
-                  <img [src]="item.imgSrc" />
+<!--                  TODO : Add images later-->
+<!--                  <img [src]="item.imgSrc" />-->
                 </figure>
                 <div>
                   <h4>{{ item.name }}</h4>
