--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,32 +1,34 @@
 <div class="footerNew">
   <div class="container">
-    <div class="row align-items-center justify-content-center footerNew-top-section">
-      <div class="boatImage"></div>
-      <div class="col-4">
-        <h3>Newsletter</h3>
-        <div class="input-group">
-          <input
-            type="email"
-            placeholder="Email Address"
-            required="required"
-            aria-required="true"
-            class="form-control"
-          />
-          <div class="input-group-append">
-            <button type="button" class="btn rounded-button">Send</button>
-          </div>
-        </div>
-      </div>
+<!--    <div class="row align-items-center justify-content-center footerNew-top-section">-->
+<!--      <div class="boatImage"></div>-->
+<!--      <div class="col-4">-->
+<!--        <h3>Newsletter</h3>-->
+<!--        <div class="input-group">-->
+<!--          <input-->
+<!--            type="email"-->
+<!--            placeholder="Email Address"-->
+<!--            required="required"-->
+<!--            aria-required="true"-->
+<!--            class="form-control"-->
+<!--          />-->
+<!--          <div class="input-group-append">-->
+<!--            <button type="button" class="btn rounded-button">Send</button>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
 
-      <div class="col-2 text-center img-section">
-        <img src="assets/img/logo.png" alt="logo" class="logo-img-footer" />
-      </div>
-      <div class="col-3 text-right text-section">
-        <h3>Parents Corner</h3>
-        <p>VISIT NOW &#8594;</p>
-      </div>
-      <div class="planetImage"></div>
-    </div>
+<!--      <div class="col-2 text-center img-section">-->
+<!--        <img src="assets/img/logo.png" alt="logo" class="logo-img-footer" />-->
+<!--      </div>-->
+<!--      <div class="col-3 text-right text-section">-->
+<!--        <h3>Parents Corner</h3>-->
+<!--        <p> <a [routerLink]="['/parents-testimonial']" target="_self"-->
+<!--        >VISIT NOW &#8594;-->
+<!--        </a></p>-->
+<!--      </div>-->
+<!--      <div class="planetImage"></div>-->
+<!--    </div>-->
 
     <div class="footerNew-secondary-nav">
       <ul class="navbar-nav">
@@ -91,7 +93,7 @@
         </li>
         <li class="nav-item">
           <a [routerLink]="['/']" class="nav-link" target="_self">
-            Career at small wonders
+            Career at Small Wonders
           </a>
         </li>
         <li class="nav-item">
@@ -109,13 +111,18 @@
             Shoonya
           </a>
         </li>
+        <li class="nav-item">
+          <a [routerLink]="['/parents-testimonial']" class="nav-link" target="_self">
+            Parents corner
+          </a>
+        </li>
       </ul>
     </div>
 
     <div class="row align-items-center footerNew-fourth-nav">
       <div class="col-md-4 col-6">
-        <span> &#169;2019 SMALL WONDERS.</span
-        ><span> All rights reserved.</span>
+        <span> &#169;2022 SMALL WONDERS.</span
+        >
       </div>
       <div class="col-md-4 col-6 text-center">
         <div class="footer-info-bar">
@@ -131,7 +138,7 @@
         </div>
       </div>
       <div class="col-md-4 col-12 text-right footer-bottom-text">
-        <span>Made with &#10084; by TECHSTASY TECHNOLOGIES</span>
+        <span> All rights reserved.</span>
       </div>
     </div>
   </div>
