--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -84,7 +84,7 @@
                   'active-link': router.url == '/books-and-beyond'
                 }"
                 class="nav-link"
-                >Books & Beyond</a
+                >Pedagogy</a
               >
             </li>
             <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
