--- a/src/app/pages/franchise-page/input-form/input-form.component.html
+++ b/src/app/pages/franchise-page/input-form/input-form.component.html
@@ -1,9 +1,9 @@
 <div class="input-form-section">
   <div class="container">
     <h3 class="text-center">Partner with Us</h3>
-    <img src="/assets/img/footer-background.png" alt="input-form-img" />
+<!--    <img src="/assets/img/footer-background.png" alt="input-form-img" />-->
     <p class="text-center sub-heading mt-4">
-      If you are interested to learn more about HEI schools, please fill in the
+      If you are interested to learn more about Small Wonders franchise, please fill in the
       form
     </p>
     <form>
