--- a/src/app/pages/home-page/contact-form/contact-form.component.html
+++ b/src/app/pages/home-page/contact-form/contact-form.component.html
@@ -1,13 +1,13 @@
 <div class="contact-form-section">
-  <div class="cf_img_1"></div>
+<!--  <div class="cf_img_1"></div>-->
   <div class="cf_img_2"></div>
   <div class="cf_img_3"></div>
 
   <div class="container">
     <div class="row">
-      <div class="col-md-5 order-12 order-md-1 text-center">
-        <img src="/assets/img/rainbow-kid.png" class="contact-form-image" />
-      </div>
+<!--      <div class="col-md-5 order-12 order-md-1 text-center">-->
+<!--        <img src="/assets/img/rainbow-kid.png" class="contact-form-image" />-->
+<!--      </div>-->
       <div class="col-md-7 order-1 order-md-12 text-left">
         <div class="con-form">
           <h3>Contact Us</h3>
@@ -86,4 +86,5 @@
       </div>
     </div>
   </div>
+  <HR WIDTH="75%" COLOR="#FF0000" SIZE="4">
 </div>
