--- a/src/app/pages/home-page/home-intro-section/home-intro-section.component.html
+++ b/src/app/pages/home-page/home-intro-section/home-intro-section.component.html
@@ -2,13 +2,13 @@
   <div class="container">
     <div class="sw_title">
       <h3>
-        Small Wonders is a Place Your Child Learns To
-        <span>Respect Others</span>
+        Small Wonders is a Place where children find their true purpose
+<!--        <span>Find their true purpose</span>-->
       </h3>
       <p>
-        Educating children is our mission and YOU the parents are our customers.
-        Our programs are designed to offer parents flexibility while maximizing
-        the benefits to our students.
+        We are committed to providing rich experiences to promote cognitive, social, and emotional development and
+        ensure students have a solid foundation needed for lifelong learning. With a student-centered approach, students
+        are active participants in their own learning.
       </p>
     </div>
     <div class="container">
@@ -33,13 +33,13 @@
         </div>
         <div class="sw_item sw_item3">
           <a href="/#"
-            ><figure><img src="/assets/img/home-intro-img-3.png" /></figure>
+            ><figure><img src="/assets/img/home-intro-img-3.jpg" /></figure>
             <p>Meet Our Team</p></a
           >
         </div>
         <div class="sw_item sw_item4">
           <a href="/admissions"
-            ><figure><img src="/assets/img/home-intro-img-4.png" /></figure>
+            ><figure><img src="/assets/img/home-intro-img-4.jpg" /></figure>
             <p>Admission</p></a>
         </div>
       </div>
