--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -4,7 +4,7 @@
 <app-home-intro-section></app-home-intro-section>
 <app-home-curriculum-section
   [displayList]="curriculumList"
-  [titleIntro]="'It’s fun to be here'"
+  [titleIntro]=""
   [title]="'Our Curriculum'"
   [type]="'curriculum'"
 ></app-home-curriculum-section>
@@ -17,11 +17,11 @@
   [title]="'Recent Events'"
   [type]="'events-and-gallery'"
 ></app-home-curriculum-section>
-<app-school-age-break
-  [schoolAgeBreakList]="schoolAgeBreakList"
-></app-school-age-break>
+<!--<app-school-age-break-->
+<!--  [schoolAgeBreakList]="schoolAgeBreakList"-->
+<!--&gt;</app-school-age-break>-->
 <app-contact-form></app-contact-form>
 <app-parents-testimonial
   [testimonialList]="testimonialList"
 ></app-parents-testimonial>
-<app-franchise-opportunity></app-franchise-opportunity>
+<!--<app-franchise-opportunity></app-franchise-opportunity>-->
