--- a/src/app/pages/home-page/page-break-section/page-break-section.component.scss
+++ b/src/app/pages/home-page/page-break-section/page-break-section.component.scss
@@ -8,7 +8,7 @@
   position: relative;
 
   h3,
-  h2 {
+  h2, h4 {
     color: #fff;
     font-style: italic;
     text-align: center;
@@ -33,7 +33,7 @@
   width: 76px;
   height: 58px;
   position: absolute;
-  right: 10%;
+  right: 0%;
   top: 15%;
 }
 
@@ -53,7 +53,7 @@
 
 @media only screen and (min-width: 450px) and (max-width: 600px) {
   .page-break-section {
-    h3, h2 {
+    h3, h2, h4 {
       font-size: 1.3em;
     }
   }
@@ -62,7 +62,7 @@
 @media only screen and (max-width: 450px) {
 
   .page-break-section {
-    h3, h2 {
+    h3, h2, h4 {
       font-size: 1.1em;
     }
   }
