Move learning block to curriculum page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -98,7 +98,7 @@
               >
             </li>
             <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
-              <a [routerLink]="['/']" class="nav-link">Contact Us</a>
+              <a [routerLink]="['/contact-form']" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </div>
