Fixed about us and it's sub pages

--- a/src/app/pages/about-us-page/about-us/about-us.component.html
+++ b/src/app/pages/about-us-page/about-us/about-us.component.html
@@ -1,9 +1,9 @@
-<app-text-info-block [title]="'ABOUT US'" [text]="text"></app-text-info-block>
+<app-text-info-block [title]="' ABOUT US'" [text]="text"></app-text-info-block>
 
 <div class="glance-component">
   <div class="rocketImage"></div>
   <div class="container">
-    
+
     <h3>At a Glance</h3>
     <div class="row mt-5">
       <div *ngFor="let item of aboutUsItems" class="col-md-3">
@@ -14,5 +14,5 @@
     </div>
   </div>
 </div>
-<app-image-card-text [image]="image" [content]="imageCardContent"></app-image-card-text>
+<!--<app-image-card-text [image]="image" [content]="imageCardContent"></app-image-card-text>-->
 <app-more-to-explore [imageList]="imageList"></app-more-to-explore>
