--- a/src/app/pages/about-us-page/extras/extras.component.html
+++ b/src/app/pages/about-us-page/extras/extras.component.html
@@ -1,5 +1,5 @@
 <app-text-info-block [title]="'VISION'" [text]="visionText"></app-text-info-block>
 <app-text-info-block [title]="'MISSION'" [text]="missionText"></app-text-info-block>
-<app-text-info-block [title]="'MOTTO &nbsp; “Connect, Create, Conquer” '" [text]="mottoText"></app-text-info-block>
+<app-text-info-block [title]="'At Small Wonders, we believe that children should not be educated to adapt to the changing world, but rather be educated to change the world themselves!'"></app-text-info-block>
 
 <app-more-to-explore [imageList]="imageList"></app-more-to-explore>
