--- a/src/app/pages/about-us-page/history/history.component.html
+++ b/src/app/pages/about-us-page/history/history.component.html
@@ -4,6 +4,6 @@
   [additionalText]="'HISTORY OF'"
 ></app-text-info-block>
 
-<app-accordion [accordionData]="accordionData"></app-accordion>
+<!--<app-accordion [accordionData]="accordionData"></app-accordion>-->
 
 <app-more-to-explore [imageList]="imageList"></app-more-to-explore>
