--- a/src/app/pages/admissions-page/admissions-page.component.html
+++ b/src/app/pages/admissions-page/admissions-page.component.html
@@ -10,12 +10,11 @@
     ></app-admission-step>
   </div>
 </div>
-<admission-input-form></admission-input-form>
 <div class="admission-applications">
   <div class="application-title">
     <br>
-    <h5>2020-21 Application</h5>
-    <h2>Dates</h2>
+    <h5>2021-22 Application</h5>
+    <h2>Eligibility </h2>
     <hr style="width: 60px;margin: auto;border: 1px solid white;">
     <br>
   </div>
@@ -43,7 +42,7 @@
         <div class="card">
          <div class="card-body">
            <a><h6 style="font-weight: 900;">DATE BRACKET</h6></a>
-         </div> 
+         </div>
         </div>
       </div>
 
@@ -67,7 +66,7 @@
 
       <div class="col-4">
         <div class="card">
-         <div class="card-body">01/08/2017 to 31/07/2018</div> 
+         <div class="card-body">01/08/2017 to 31/07/2018</div>
         </div>
       </div>
 
@@ -89,7 +88,7 @@
 
       <div class="col-4">
         <div class="card">
-         <div class="card-body">01/08/2016 to 31/07/2017</div> 
+         <div class="card-body">01/08/2016 to 31/07/2017</div>
         </div>
       </div>
 
@@ -111,7 +110,7 @@
 
       <div class="col-4">
         <div class="card">
-         <div class="card-body">01/04/2015 to 31/03/2016</div> 
+         <div class="card-body">01/04/2015 to 31/03/2016</div>
         </div>
       </div>
 
@@ -133,7 +132,7 @@
 
       <div class="col-4">
         <div class="card">
-         <div class="card-body">01/04/2014 to 31/03/2015</div> 
+         <div class="card-body">01/04/2014 to 31/03/2015</div>
         </div>
       </div>
 
@@ -155,12 +154,12 @@
 
       <div class="col-4">
         <div class="card">
-         <div class="card-body">01/04/2013 to 31/03/2014</div> 
+         <div class="card-body">01/04/2013 to 31/03/2014</div>
         </div>
       </div>
 
     </div>
-    
+
     <!--Row 7-->
     <div class="row">
       <div class="col-4">
@@ -177,7 +176,7 @@
 
       <div class="col-4">
         <div class="card">
-         <div class="card-body">01/04/2012 to 31/03/2013</div> 
+         <div class="card-body">01/04/2012 to 31/03/2013</div>
         </div>
       </div>
 
@@ -199,7 +198,7 @@
 
       <div class="col-4">
         <div class="card">
-         <div class="card-body">01/04/2011 to 31/03/2012</div> 
+         <div class="card-body">01/04/2011 to 31/03/2012</div>
         </div>
       </div>
 
@@ -221,12 +220,12 @@
 
       <div class="col-4">
         <div class="card">
-         <div class="card-body">01/04/2010 to 31/03/2011</div> 
+         <div class="card-body">01/04/2010 to 31/03/2011</div>
         </div>
       </div>
 
     </div>
-    
+
     <!--Row 10-->
     <div class="row">
       <div class="col-4">
@@ -243,7 +242,7 @@
 
       <div class="col-4">
         <div class="card">
-         <div class="card-body">01/04/2009 to 31/03/2010</div> 
+         <div class="card-body">01/04/2009 to 31/03/2010</div>
         </div>
       </div>
 
@@ -265,7 +264,7 @@
 
       <div class="col-4">
         <div class="card">
-         <div class="card-body">01/04/2008 to 31/03/2009</div> 
+         <div class="card-body">01/04/2008 to 31/03/2009</div>
         </div>
       </div>
 
@@ -277,5 +276,8 @@
   <div class="container text-center">
     <button type="button" class="btn">Send an Inquiry</button>
   </div><br>
+<!--  TODO Add admission form as a popup for send inquiry-->
+<!--  <admission-input-form></admission-input-form>-->
+
 
 </div>
