replaced banner images

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -66,7 +66,7 @@
             class="nav-link"
             target="_self"
           >
-            Books &amp; Beyond
+            Pedagogy
           </a>
         </li>
         <li class="nav-item">
@@ -92,11 +92,6 @@
           <a class="nav-link" [routerLink]="['/blog']"> Blog </a>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/']" class="nav-link" target="_self">
-            Career at Small Wonders
-          </a>
-        </li>
-        <li class="nav-item">
           <a [routerLink]="['/admissions']" class="nav-link" target="_self">
             Admission form
           </a>
@@ -108,7 +103,7 @@
         </li>
         <li class="nav-item">
           <a [routerLink]="['/shoonya']" class="nav-link" target="_self">
-            Shoonya
+            Ikigai
           </a>
         </li>
         <li class="nav-item">
