--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -59,12 +59,12 @@
             </li>
             <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
               <a
-                [routerLink]="['/franchise']"
+                [routerLink]="['/schedule-tour']"
                 [ngClass]="{
-                  'active-link': router.url == '/franchise'
+                  'active-link': router.url == '/schedule-tour'
                 }"
                 class="nav-link"
-                >Franchise</a
+                >Schedule a tour</a
               >
             </li>
             <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
