--- a/src/app/pages/home-page/contact-form/contact-form.component.html
+++ b/src/app/pages/home-page/contact-form/contact-form.component.html
@@ -80,7 +80,7 @@
                 ></textarea>
               </div>
             </div>
-            <button class="btn mbtn mt-2">Send Message</button>
+            <button (click)="sendEmail()" class="btn mbtn mt-2">Send Message</button>
           </form>
         </div>
       </div>
