--- a/src/app/pages/schedule-tour-page/location-explore/location-explore.component.html
+++ b/src/app/pages/schedule-tour-page/location-explore/location-explore.component.html
@@ -31,7 +31,7 @@
                   >{{ item.phone }}
                 </p>
                 <p>
-                  <span class="mr-1"><i class="fa fa-envelope"></i></span
+                  <span class="mr-1"><i class="fa"></i></span
                   >{{ item.email }}
                 </p>
               </div><br>
