--- a/src/app/pages/shoonya-page/shoonya-page.component.html
+++ b/src/app/pages/shoonya-page/shoonya-page.component.html
@@ -1,7 +1,7 @@
 <div class="bg-img">
     <div class="container h100">
       <div class="d-flex flex-column text-center justify-content-center align-items-center h100">
-        <h1>SHOONYA</h1>
+        <h1>IKIGAI</h1>
         <p>“SMALL WONDERS has enriched the lives of families, students and their communities by providing
             quality education for over 18 years. Today, the network of WONDERIANS extends in the various
             parts of the city, continuing our commitment to excellence, innovation, and growth.
@@ -61,7 +61,7 @@
                     <p>Students entrust themselves and others
                         by understanding emotions and needs of
                         their own and others. They demonstrate
-                        respect and empathy for others. 
+                        respect and empathy for others.
                     </p>
                 </div>
                 </div>
@@ -85,7 +85,7 @@
                         </p>
                     </div>
                     </div>
-                    
+
                     <div class="container row mb-4">
                         <div>
                          <div class="circle justify-content-center  align-items-center ">
