--- a/src/app/pages/admissions-page/admissions-page.component.html
+++ b/src/app/pages/admissions-page/admissions-page.component.html
@@ -1,4 +1,5 @@
 <app-background-img-text [title]="title" [bgImage]="bgImage"></app-background-img-text>
+<!--<app-image-card-text [image]="bgImage" ></app-image-card-text>-->
 <div class="admission-intro-text">
   <div *ngFor="let item of admissionInfoList">
     <app-admission-step
