Removed admission forms

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -91,11 +91,11 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/blog']"> Blog </a>
         </li>
-        <li class="nav-item">
-          <a [routerLink]="['/admissions']" class="nav-link" target="_self">
-            Admission form
-          </a>
-        </li>
+<!--        <li class="nav-item">-->
+<!--          <a [routerLink]="['/admissions']" class="nav-link" target="_self">-->
+<!--            Admission form-->
+<!--          </a>-->
+<!--        </li>-->
         <li class="nav-item">
           <a [routerLink]="['/schedule-tour']" class="nav-link" target="_self">
             Schedule a tour
