--- a/src/app/components/carousel-image-section/carousel-image-section.component.scss
+++ b/src/app/components/carousel-image-section/carousel-image-section.component.scss
@@ -94,21 +94,21 @@
   background-size: cover;
 }
 
-.bulb {
-  position: absolute;
-  opacity: 0.5;
-  bottom: 2%;
-  right: 20%;
-  width: 200px;
-  height: 300px;
-}
+//.bulb {
+//  position: absolute;
+//  opacity: 0.5;
+//  bottom: 2%;
+//  right: 20%;
+//  width: 200px;
+//  height: 300px;
+//}
 
-.climbingStairs {
-  position: absolute;
-  bottom: 5%;
-  right: 5%;
-  cursor: pointer;
-}
+//.climbingStairs {
+//  position: absolute;
+//  bottom: 5%;
+//  right: 5%;
+//  cursor: pointer;
+//}
 
 .h100 {
   height: 100%;
