Added testimonials and acticity page text

--- a/src/app/pages/activities-page/activities-list/activities-list.component.html
+++ b/src/app/pages/activities-page/activities-list/activities-list.component.html
@@ -6,8 +6,8 @@
         (click)="navigateTo('curricular')"
       >
         <div class="header">
-          <h1>Curricular</h1>
-          <p>{{ sampleText }}</p>
+          <h1>Curriculum</h1>
+          <p>{{ curriculumText }}</p>
         </div>
       </div>
       <div
@@ -16,13 +16,13 @@
       >
         <div class="header">
           <h1>Co-Curricular</h1>
-          <p>{{ sampleText }}</p>
+          <p>{{ coCurricularText }}</p>
         </div>
       </div>
       <div class="col-md-5 img_3 activity_img" (click)="navigateTo('sports')">
         <div class="header">
           <h1>Sports</h1>
-          <p>{{ sampleText }}</p>
+          <p>{{ sportsText }}</p>
         </div>
       </div>
       <div
@@ -31,7 +31,7 @@
       >
         <div class="header">
           <h1>Stage Exposure</h1>
-          <p>{{ sampleText }}</p>
+          <p>{{ stageExposureText }}</p>
         </div>
       </div>
       <div
@@ -40,13 +40,13 @@
       >
         <div class="header">
           <h1>Discovery</h1>
-          <p>{{ sampleText }}</p>
+          <p>{{ discoveryText }}</p>
         </div>
       </div>
       <div class="col-md-5 img_6 activity_img" (click)="navigateTo('clubs')">
         <div class="header">
           <h1>Clubs</h1>
-          <p>{{ sampleText }}</p>
+          <p>{{ clubsText }}</p>
         </div>
       </div>
     </div>
