--- a/src/app/pages/activities-page/corner-store/corner-store.component.html
+++ b/src/app/pages/activities-page/corner-store/corner-store.component.html
@@ -4,24 +4,25 @@
     <p class="text-center">The Cornerstones To All That We Do...</p>
     <div class="row justify-content-center">
       <div class="col-md-2 col-sm-4">
-        <div class="circle"></div>
-        <p class="caption mt-2">{{ text1 }}</p>
+<!--        <div class="circle"></div>-->
+        <h5>Engage</h5>
       </div>
       <div class="col-md-2 col-sm-4">
-        <div class="circle"></div>
-        <p class="caption mt-2">{{ text1 }}</p>
+<!--        <div class="circle"></div>-->
+        <h5>Explore</h5>
       </div>
       <div class="col-md-2 col-sm-4">
-        <div class="circle"></div>
-        <p class="caption mt-2">{{ text1 }}</p>
+<!--        <div class="circle"></div>-->
+        <h5>Explain</h5>
       </div>
       <div class="col-md-2 col-sm-4">
-        <div class="circle"></div>
-        <p class="caption mt-2">{{ text1 }}</p>
+<!--        <div class="circle"></div>-->
+        <h5>Elaborate</h5>
       </div>
       <div class="col-md-2 col-sm-4">
-        <div class="circle"></div>
-        <p class="caption mt-2">{{ text1 }}</p>
+<!--        <div class="circle"></div>-->
+<!--        <p class="caption mt-2">Evaluate</p>-->
+        <h5>Evaluate</h5>
       </div>
     </div>
   </div>
