--- a/src/app/pages/activities-page/explore-section/explore-section.component.html
+++ b/src/app/pages/activities-page/explore-section/explore-section.component.html
@@ -1,18 +1,29 @@
 <div class="explore-section">
 <div class="container">
-  <div class="row">
-  <div class="col-6">
-    <img src="/assets/img/explore_img.jpeg" width="100%">
-  </div>
-  <div class="col-6">
+  <div class="row top-para">
+<!--  <div class="col-6">-->
+<!--    <img src="/assets/img/explore_img.jpeg" width="100%">-->
+<!--  </div>-->
+  <div class="col-12">
     <h3>Where will you go?</h3><br>
     <p class="text-left">
       {{paraText}}
     </p><br><br>
-    <h5>EXPLORE.</h5>
-    <h5>DREAM.</h5>
-    <h5>DISCOVER.</h5>
   </div>
 </div>
+  <div class="row">
+    <div class="col-md-4 col-sm-4">
+      <!--        <div class="circle"></div>-->
+      <h5>EXPLORE</h5>
+    </div>
+    <div class="col-md-4 col-sm-4">
+      <!--        <div class="circle"></div>-->
+      <h5>DREAM</h5>
+    </div>
+    <div class="col-md-4 col-sm-4">
+      <!--        <div class="circle"></div>-->
+      <h5>DISCOVER</h5>
+    </div>
+  </div>
 </div>
 </div>
