--- a/src/app/pages/activities-page/explore-section/explore-section.component.scss
+++ b/src/app/pages/activities-page/explore-section/explore-section.component.scss
@@ -8,7 +8,7 @@
   h5 {
     color: maroon;
   }
-  
+
   p {
     font-family: "Nunito", sans-serif ;
   }
@@ -30,4 +30,8 @@
   text-transform: uppercase;
   font-weight: 700;
   text-align: center;
+}
+
+.top-para {
+  margin-bottom: -55px;
 }
