--- a/src/app/pages/activities-page/activities-list/activities-list.component.html
+++ b/src/app/pages/activities-page/activities-list/activities-list.component.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
       <div
         class="col-md-5 img_1 activity_img"
-        (click)="navigateTo('curricular')"
+        (click)="navigateTo('curriculum')"
       >
         <div class="header">
           <h1>Curriculum</h1>
