--- a/src/app/pages/activities-page/activities-list/activities-list.component.scss
+++ b/src/app/pages/activities-page/activities-list/activities-list.component.scss
@@ -21,7 +21,7 @@
       rgba(0, 0, 0, 0),
       rgba(0, 0, 0, 0.6)
     ),
-    url("/assets/img/kids_library.jpg");
+    url("/assets/img/activities/curriculum/thumbnail.jpg");
 
   background-size: cover;
   background-position: bottom;
@@ -101,6 +101,17 @@
   }
   p {
     font-size: 1.1em;
+  }
+}
+
+@media only screen and (min-width: 750px) and (max-width: 990px) {
+  .activities-list-section {
+    .header > h1{
+      font-size: 1.4em;
+    }
+    p {
+      font-size: 1em;
+    }
   }
 }
 
