--- a/src/app/pages/activities-page/corner-store/corner-store.component.scss
+++ b/src/app/pages/activities-page/corner-store/corner-store.component.scss
@@ -8,7 +8,13 @@
   h3 {
     text-transform: uppercase;
   }
+
+  h5 {
+    color: maroon;
+    text-transform: uppercase;
+  }
 }
+
 
 .circle {
   height: 7em;
