--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -87,16 +87,17 @@
                 >Pedagogy</a
               >
             </li>
-            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
-              <a
-                [routerLink]="['/events-and-gallery']"
-                [ngClass]="{
-                  'active-link': router.url == '/events-and-gallery'
-                }"
-                class="nav-link"
-                >Events & Gallery</a
-              >
-            </li>
+<!--            TODO Uncomment Events & Gallery after adding images-->
+<!--            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">-->
+<!--              <a-->
+<!--                [routerLink]="['/events-and-gallery']"-->
+<!--                [ngClass]="{-->
+<!--                  'active-link': router.url == '/events-and-gallery'-->
+<!--                }"-->
+<!--                class="nav-link"-->
+<!--                >Events & Gallery</a-->
+<!--              >-->
+<!--            </li>-->
             <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
               <a [routerLink]="['/contact-form']" class="nav-link">Contact Us</a>
             </li>
