--- a/src/app/pages/activities-page/activity-display/activity-display.component.html
+++ b/src/app/pages/activities-page/activity-display/activity-display.component.html
@@ -1,31 +1,29 @@
-<div class="activity-section">
-  <div class="ts_img_1"></div>
-  <div class="ts_img_2"></div>
-  <div class="container">
-    <div class="title_sec mb-5">
-      <h3>{{ activityName }}</h3>
-    </div>
-
-    <div class="row justify-content-center">
-      <div class="col-lg-10">
-        <!-- slick carousel component -->
-        <ngx-slick-carousel
-          class="carousel"
-          #slickModal="slick-carousel"
-          [config]="slideConfig"
-          (init)="slickInit($event)"
-        >
-          <div
-            ngxSlickItem
-            *ngFor="let item of activityImageList"
-            class="slide"
-          >
-            <div class="activity-box">
-              <img [src]="item" alt="activity-img" />
-            </div>
-          </div>
-        </ngx-slick-carousel>
-      </div>
+<div id="carouselImageList" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div
+      *ngFor="let data of imageListInCarousel; let i = index"
+      class="carousel-item"
+      [ngClass]="i === 0 ? 'active' : ''"
+    >
+      <img [src]="data" alt="eventImageCarousel"/>
     </div>
   </div>
+  <a
+    class="carousel-control-prev"
+    href="#carouselImageList"
+    role="button"
+    data-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a
+    class="carousel-control-next"
+    href="#carouselImageList"
+    role="button"
+    data-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
