Fixed about us page image css and link click

--- a/src/app/components/more-to-explore/more-to-explore.component.scss
+++ b/src/app/components/more-to-explore/more-to-explore.component.scss
@@ -13,7 +13,7 @@
 
   img {
     border-radius: 10px;
-    width: 100%;
+    //width: 100%;
     height: auto;
     max-height: 11em;
     margin-bottom: 1em;
