--- a/src/app/pages/about-us-page/about-us/about-us.component.html
+++ b/src/app/pages/about-us-page/about-us/about-us.component.html
@@ -4,14 +4,14 @@
   <div class="rocketImage"></div>
   <div class="container">
 
-    <h3>At a Glance</h3>
-    <div class="row mt-5">
-      <div *ngFor="let item of aboutUsItems" class="col-md-3">
-        <div class="glance-item">
-          <p>{{ item.info }}</p>
-        </div>
-      </div>
-    </div>
+<!--    <h3>At a Glance</h3>-->
+<!--    <div class="row mt-5">-->
+<!--      <div *ngFor="let item of aboutUsItems" class="col-md-3">-->
+<!--        <div class="glance-item">-->
+<!--          <p>{{ item.info }}</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
   </div>
 </div>
 <!--<app-image-card-text [image]="image" [content]="imageCardContent"></app-image-card-text>-->
