--- a/src/app/components/more-to-explore/more-to-explore.component.html
+++ b/src/app/components/more-to-explore/more-to-explore.component.html
@@ -3,7 +3,7 @@
     <h3>There's more to explore</h3>
     <div class="row mt-5">
       <div *ngFor="let image of imageList" class="col-md-3">
-        <img [src]="image.imageUrl" alt="explore-more-image" />
+        <img [src]="image.imageUrl" (click)="goToImageLink(image.link)" alt="explore-more-image" />
         <a href="{{image.link}}">{{image.text}}</a>
       </div>
     </div>
