Added Video component to show videos in about us.

--- a/src/app/pages/about-us-page/about-us/about-us.component.html
+++ b/src/app/pages/about-us-page/about-us/about-us.component.html
@@ -4,7 +4,9 @@
   <div class="rocketImage"></div>
   <div class="container">
 
-<!--    <h3>At a Glance</h3>-->
+
+
+    <h3>At a Glance</h3>
 <!--    <div class="row mt-5">-->
 <!--      <div *ngFor="let item of aboutUsItems" class="col-md-3">-->
 <!--        <div class="glance-item">-->
@@ -12,6 +14,7 @@
 <!--        </div>-->
 <!--      </div>-->
 <!--    </div>-->
+          <app-video [urls]="aboutUsVideoUrls | safe "></app-video>
   </div>
 </div>
 <!--<app-image-card-text [image]="image" [content]="imageCardContent"></app-image-card-text>-->
