--- a/src/app/pages/about-us-page/about-us/about-us.component.scss
+++ b/src/app/pages/about-us-page/about-us/about-us.component.scss
@@ -19,17 +19,17 @@
   font-family: 'Nunito', sans-serif;
 }
 
-.glance-item {
-  width: 70%;
-  font-family: "Nunito", sans-serif;
-  text-align: center;
-  border: 1px solid;
-  padding-top: 1em;
-  height: 5em;
-
-  h2 {
-    color: $button-primary;
-    margin-bottom: 0;
-  }
-
-}
+//.glance-item {
+//  width: 70%;
+//  font-family: "Nunito", sans-serif;
+//  text-align: center;
+//  border: 1px solid;
+//  padding-top: 1em;
+//  height: 5em;
+//
+//  h2 {
+//    color: $button-primary;
+//    margin-bottom: 0;
+//  }
+//
+//}
