Updated homepage slide images

--- a/src/app/components/carousel-image-section/carousel-image-section.component.html
+++ b/src/app/components/carousel-image-section/carousel-image-section.component.html
@@ -60,5 +60,7 @@
 <!--      </div>-->
     </div>
     <!--/Second slide-->
+    <div class="carousel-item slide-home-page slide-3">
+    </div>
   </div>
 </div>
