--- a/src/app/components/carousel-image-section/carousel-image-section.component.scss
+++ b/src/app/components/carousel-image-section/carousel-image-section.component.scss
@@ -10,9 +10,6 @@
 }
 
 @media only screen and (min-width: 800px) {
-  .slide-home-page {
-    height: 30em;
-  }
   h1 {
     font-size: 3.5em;
   }
@@ -30,12 +27,35 @@
   }
 }
 
-@media only screen and (min-width: 520px) and (max-width: 800px) {
+@media only screen and (min-width: 1200px) {
+  .slide-home-page {
+    height: 30em;
+  }
+}
+
+@media only screen and (min-width: 950px) and (max-width: 1200px) {
   .slide-home-page {
     height: 25em;
   }
 }
 
+@media only screen and (min-width: 800px) and (max-width: 950px) {
+  .slide-home-page {
+    height: 20em;
+  }
+}
+
+@media only screen and (min-width: 670px) and (max-width: 800px) {
+  .slide-home-page {
+    height: 18em;
+  }
+}
+
+@media only screen and (min-width: 520px) and (max-width: 670px) {
+  .slide-home-page {
+    height: 16em;
+  }
+}
 
 @media only screen and (min-width: 520px) and (max-width: 650px) {
   h1 {
@@ -49,7 +69,9 @@
 
 @media only screen and (min-width: 370px) and (max-width: 520px) {
   .slide-home-page {
-    height: 20em;
+    height: 13em;
+    width: 110%;
+    margin-left: -10px;
   }
 
   h1 {
@@ -62,7 +84,9 @@
 
 @media only screen and (max-width: 370px) {
   .slide-home-page {
-    height: 16em;
+    height: 10em;
+    width: 110%;
+    margin-left: -10px
   }
 }
 
@@ -90,6 +114,11 @@
 }
 
 .slide-2 {
+  background: url("/assets/img/homepage/2.jpg") no-repeat bottom;
+  background-size: cover;
+}
+
+.slide-3 {
   background: url("/assets/img/homepage/3.jpg") no-repeat bottom;
   background-size: cover;
 }
@@ -150,6 +179,15 @@ h1 {
     font-family: Shadows Into Light Two, cursive;
     color: $white-primary;
   }
+}
 
+.slide-3 {
+  h1 {
+    text-align: left;
+  }
 
+  h2 {
+    font-family: Shadows Into Light Two, cursive;
+    color: $white-primary;
+  }
 }
