--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,141 +1,58 @@
-<div>
-  <nav class="navbar navbar-light bg-white navbar-expand-lg">
-    <div class="top-nav">
-      <div class="container">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#topNavCollapse"
-          aria-controls="navbarTogglerDemo01"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+<div class="container">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand header-logo" [routerLink]="['/']">
+        <img src="../../../assets/img/logo.png">
+      </a>
+      <button class="navbar-toggler px-0" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse navbar-collapse-custom" id="navbarSupportedContent">
+        <hr class="hr text-white" />
+        
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a [routerLink]="['/']" [ngClass]="{'active-link': router.url == '/'}" class="nav-link mx-3"
+              aria-current="page">Home</a>
+          </li>
+          <li class="nav-item">
+            <a [routerLink]="['/about-us']" [ngClass]="{'active-link': router.url === '/about-us'}" class="nav-link mx-3"
+              aria-current="page">About Us</a>
+          </li>
+        
+          <li class="nav-item">
+            <a [routerLink]="['/curriculum']" [ngClass]="{'active-link': router.url == '/curriculum'}" class="nav-link mx-3"
+              aria-current="page">Curriculum</a>
+          </li>
+        
+          <li class="nav-item">
+            <a [routerLink]="['/admissions']" [ngClass]="{'active-link': router.url == '/admissions'}" class="nav-link mx-3"
+              aria-current="page">Admissions</a>
+          </li>
+        
+          <li class="nav-item">
+            <a [routerLink]="['/schedule-tour']" [ngClass]="{'active-link': router.url == '/schedule-tour'}"
+              class="nav-link mx-3" aria-current="page">Schedule a Tour</a>
+          </li>
+        
+          <li class="nav-item">
+            <a [routerLink]="['/activities']" [ngClass]="{'active-link': router.url == '/activities'}" class="nav-link mx-3"
+              aria-current="page">Activities</a>
+          </li>
+        
+          <li class="nav-item">
+            <a [routerLink]="['/books-and-beyond']" [ngClass]="{'active-link': router.url == '/books-and-beyond'}"
+              class="nav-link mx-3" aria-current="page">Pedagogy</a>
+          </li>
+        
+          <li class="nav-item mx-3">
+            <button type="button" class="btn btn-primary btn-rounded px-4 py-2" (click)="navigateToContact()">Contact us</button>
+          </li>
+        </ul>
 
-        <div id="topNavCollapse" class="navbar-collapse collapse">
-          <ul class="navbar-nav">
-            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
-              <a
-                [ngClass]="{
-                  'active-link': router.url == '/'
-                }"
-                class="nav-link pointer-icon"
-                (click)="navigateToHome()"
-              >
-                <i class="fa fa-home" aria-hidden="true"></i>
-              </a>
-            </li>
-            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
-              <a
-                [routerLink]="['/about-us']"
-                [ngClass]="{
-                  'active-link': router.url == '/about-us'
-                }"
-                class="nav-link"
-                >About Us</a
-              >
-            </li>
-            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
-              <a
-                [routerLink]="['/curriculum']"
-                [ngClass]="{
-                  'active-link': router.url == '/curriculum'
-                }"
-                class="nav-link"
-                >Curriculum</a
-              >
-            </li>
-            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
-              <a
-                [routerLink]="['/admissions']"
-                [ngClass]="{
-                  'active-link': router.url == '/admissions'
-                }"
-                class="nav-link"
-                >Admissions</a
-              >
-            </li>
-            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
-              <a
-                [routerLink]="['/schedule-tour']"
-                [ngClass]="{
-                  'active-link': router.url == '/schedule-tour'
-                }"
-                class="nav-link"
-                >Schedule a tour</a
-              >
-            </li>
-            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
-              <a
-                [routerLink]="['/activities']"
-                class="nav-link"
-                [ngClass]="{
-                  'active-link': router.url == '/activities'
-                }"
-                >Activities</a
-              >
-            </li>
-            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
-              <a
-                [routerLink]="['/books-and-beyond']"
-                [ngClass]="{
-                  'active-link': router.url == '/books-and-beyond'
-                }"
-                class="nav-link"
-                >Pedagogy</a
-              >
-            </li>
-<!--            TODO Uncomment Events & Gallery after adding images-->
-<!--            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">-->
-<!--              <a-->
-<!--                [routerLink]="['/events-and-gallery']"-->
-<!--                [ngClass]="{-->
-<!--                  'active-link': router.url == '/events-and-gallery'-->
-<!--                }"-->
-<!--                class="nav-link"-->
-<!--                >Events & Gallery</a-->
-<!--              >-->
-<!--            </li>-->
-            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
-              <a [routerLink]="['/contact-form']" class="nav-link">Contact Us</a>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
   </nav>
-
-  <div class="container bottom-nav">
-    <div class="row align-items-center">
-      <div class="col-md-4 col-4">
-        <div class="nleft">
-          <a href="#" class="envelope"><i class="fa fa-envelope"></i></a>
-          <a href="#" class="phone"
-            ><i class="fa fa-phone mr-2"></i> {{ contactButtonText }}</a
-          >
-        </div>
-      </div>
-
-      <div class="text-center col-md-4 col-4">
-        <a
-          href="/"
-          aria-current="page"
-          target="_self"
-          class="navbar-brand logo-wrapper"
-        >
-          <img src="/assets/img/logo.png" class="header-logo" />
-        </a>
-      </div>
-
-      <div class="col-md-4 col-4">
-        <div class="nright">
-          <a href="https://www.facebook.com/smallwonderspanipat/" target="_blank"><i class="fa fa-facebook-official"></i></a>
-          <a href="https://www.instagram.com/small_wonders_panipat/" target="_blank"><i class="fa fa-instagram"></i></a>
-          <a href="https://www.youtube.com/channel/UCUcd6kNDBI7x-yvoYrdnstw" target="_blank"><i class="fa fa-youtube"></i></a>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
