--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -7,3 +7,6 @@ $blue-primary: #2e5077;
 $background-primary-light: #f9f6f1;
 $shadow-yellow: #ffc107;
 $background-light-grey: #eee;
+
+
+$btn-primary: #B4874C
