Responsive header, header active link, jumbo tran started

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,4 @@
 <app-header></app-header>
-
-<!-- Jumbo-tron starts-->
-<!-- <div class="jumbo-tron d-flex align-items-center my-5 py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-7 order-2 order-sm-1 d-flex flex-column text-center text-lg-start my-5-sm">
-                <h4>Welcome to Small Wonders</h4>
-
-                <div>
-                    <div class="text-center text-lg-start jumbo-tron-text">
-                        <div class="mb-5 mb-sm-3 col-sm-8">Designed to Equip
-                        Students with the Skills necessary for
-                        Success!</div>
-                        <button type="button" class="btn btn-primary button-rounded px-5 mt-lg-5">Get started</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-5 order-1 order-sm-2 text-center mb-10 jumbo-tran-animation"> -->
-                <!-- <img src="assets/img/homepage/home-boy.svg" class="img-fluid" alt=""> -->
-                <!-- <img src="assets/img/homepage/blue-bg-boy.svg" class="blue img-fluid" alt=""> -->
-                <!-- <img src="assets/img/homepage/gold-bg-boy.svg" class="gold img-fluid" alt=""> -->
-            <!-- </div>
-        </div>
-    </div>
-</div> -->
-<!-- Jumbo-tron ends-->
-
+<app-jumbotron></app-jumbotron>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
