--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -9,4 +9,5 @@ $shadow-yellow: #ffc107;
 $background-light-grey: #eee;
 
 
-$btn-primary: #B4874C
+$btn-primary: #B4874C;
+$active-text-color: #772234;
