--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,8 +1,9 @@
-.header-logo img{
+.header-logo img {
   width: 108px;
 }
 
-.nav-item a, .nav-item button{
+.nav-item a,
+.nav-item button {
   font-weight: 400;
   font-size: 16px;
 }
@@ -11,19 +12,72 @@
   font-weight: 100;
 }
 
-@media only screen and (max-width: 480px) {
-  // .navbar-toggler {
-  //   font-size: 16px;
-  // }
-  // .nright a i {
-  //   width: 25px;
-  //   height: 25px;
-  //   font-size: 16px;
-  // }
+.close-me {
+  display: none;
 }
 
-@media only screen and (max-width: 350px) {
-  // .header-logo {
-  //   width: 100%;
-  // }
+
+@media only screen and (max-width: 480px) {
+  .nav-bar-lg {
+    display: none;
+  }
+
+  .navbar {
+    --bs-navbar-toggler-border-color: 0;
+
+    .navbar-toggler:focus,
+    .navbar-toggler:active,
+    .navbar-toggler-icon:focus {
+      outline: none;
+      box-shadow: none;
+      border: 0;
+    }
+
+    .navbar-collapse-custom {
+      backdrop-filter: blur(10px);
+      padding: 20px;
+      border-radius: 20px;
+
+      position: absolute;
+      top: 10%;
+      width: 100%;
+      left: 0;
+      z-index: 100;
+    }
+
+    li {
+      padding: 5px;
+      border-bottom: 1px solid var(--bs-navbar-color);
+    }
+
+    li:last-child {
+      border-bottom: none;
+    }
+
+    .nav-item a,
+    .nav-item button {
+      font-size: 14px;
+    }
+
+    .contact-us {
+      background-color: transparent !important;
+      border: none !important;
+      padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x) !important;
+      font-weight: 400 !important;
+    }
+
+    .in-active-link {
+      color: var(--bs-navbar-color) !important;
+    }
+
+    .close-me {
+      display: block;
+      position: absolute;
+      right: 25px;
+
+      img {
+        transform: scale(1.5);
+      }
+    }
+  }
 }
