--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
       <a class="navbar-brand header-logo" [routerLink]="['/']">
-        <img src="../../../assets/img/logo.png">
+        <img src="../../../assets/img/new-logo.png">
       </a>
 
       <!-- Responsive -->
